tests/should_fail/match_struct_two_literals_non_exhaust.nv
module fail
struct Point { x: Int, y: Int }
// Only two literal arms — not exhaustive (no catchall)
let p = Point(1, 2)
let r = match p {
    Point { x: 0, y: 0 } => "origin",
    Point { x: 0, y }    => "y-axis",
}
